# TPFINAL_LABO3

./: CMakeLists.txt  CMakePresets.json  Informe.txt  README.md  WindowsSetUp.md  scriptsPythonInforme.ipynb
include/: camera.hpp  frequencyFilters.hpp  metrics.hpp  spatialFilters.hpp  videoProcessor.hpp
python/: frequency_response.py  kernels.py  test_kernels.py
src/: camera.cpp  frequencyFilters.cpp  main.cpp  metrics.cpp  spatialFilters.cpp  videoProcessor.cpp
